--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
     "sass": "^1.54.9",
+    "sweetalert": "^2.1.2",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
